# live-link-list

./: .gitignore  README.md
backend/: .coveragerc  .tool-versions  Procfile  app.json  conftest.py  manage.py  pyproject.toml  pytest.ini
backend/livelinklist/: asgi.py  models.py  settings.py  urls.py  wsgi.py
backend/livelinklist/lives/: apps.py  factories.py  filters.py  models.py  permissions.py  serializers.py  views.py
backend/livelinklist/lives/management/commands/: initialize-platforms.py  initialize.py  seed.py
backend/livelinklist/lives/migrations/: 0001_initial.py  0002_auto_20210309_0526.py  0003_delete_userplatform.py  0004_live_username.py  0005_auto_20210313_0116.py  0006_remove_live_is_expired.py  0007_auto_20210319_0419.py  0008_platform_live_url_extra.py
backend/livelinklist/lives/tests/: initialize_models.py  test_create_live.py  test_delete_lives.py  test_retrieve_live.py  test_update_live.py
backend/livelinklist/users/: apps.py  factories.py  models.py  permissions.py  serializers.py  views.py
backend/livelinklist/users/migrations/: 0001_initial.py  0002_auto_20210311_0227.py  0003_auto_20210330_2254.py  0004_user_email_confirmed.py
backend/livelinklist/users/tests/: test_user_create.py  test_user_delete.py  test_user_login_logout.py  test_user_retrieve.py  test_user_update.py
frontend/: package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  footer.js  index.css  index.js  nav-bar.js
frontend/src/browse-page/: browse-page.js  featured-live.js  individual-live.js
frontend/src/hooks/: axiosApi.js  (+1 more)
(+30 files in other folders)
